<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CrearPaciente">

    <EditText
        android:id="@+id/etDniPaciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dni_paciente"
        android:inputType="text" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextViewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_user"
        android:inputType="text"
        android:completionThreshold="1" />

    <EditText
        android:id="@+id/etNombrePaciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_paciente"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fecha_nacimiento"
        android:focusable="false"
        android:clickable="true"
        android:inputType="none" />

    <EditText
        android:id="@+id/etDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/direccion"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:inputType="phone" />

    <Button
        android:id="@+id/btnGuardarPaciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar_paciente" />
</LinearLayout>
