<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FAFAFA"
    tools:context=".ui.EditarPaciente">

    <!-- Elementos para buscar al paciente -->
    <EditText
        android:id="@+id/editTextBuscarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/buscar_usuario"
        android:inputType="text"
        android:drawableStart="@drawable/ic_search_black_24dp"
        android:drawablePadding="10dp"
        android:padding="12dp"/>

    <Button
        android:id="@+id/buttonBuscarUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        android:padding="12dp"/>

    <!-- Elementos para editar al paciente (ocultos inicialmente) -->
    <EditText
        android:id="@+id/etDniPaciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dni_paciente"
        android:inputType="text"
        android:visibility="gone"
        android:drawableStart="@drawable/ic_person_outline_black_24dp"
        android:drawablePadding="10dp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/etNombrePaciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_paciente"
        android:inputType="textPersonName"
        android:visibility="gone"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="10dp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/etFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fecha_nacimiento"
        android:inputType="none"
        android:focusable="false"
        android:clickable="true"
        android:visibility="gone"
        android:drawableStart="@drawable/ic_calendar_today_black_24dp"
        android:drawablePadding="10dp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/etDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/direccion"
        android:inputType="textPostalAddress"
        android:visibility="gone"
        android:drawableStart="@drawable/ic_home_black_24dp"
        android:drawablePadding="10dp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:visibility="gone"
        android:drawableStart="@drawable/ic_phone_black_24dp"
        android:drawablePadding="10dp"
        android:padding="12dp" />

    <Button
        android:id="@+id/btnGuardarPaciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar_paciente"
        android:background="@color/black"
        android:textColor="#FFFFFF"
        android:padding="12dp"
        android:visibility="gone" />

</LinearLayout>
