<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.edgarmontero.proyectoDam.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_historial"
            app:destination="@id/nav_historial" />
        <action
            android:id="@+id/action_nav_home_to_nav_crear_consulta"
            app:destination="@id/nav_crear_consulta" />
        <action
            android:id="@+id/action_nav_home_to_nav_ajustes"
            app:destination="@id/nav_ajustes" />

    </fragment>

    <fragment
        android:id="@+id/nav_historial"
        android:name="com.edgarmontero.proyectoDam.fragment.HistorialPacienteFragment"
        android:label="@string/menu_historial"
        tools:layout="@layout/fragment_historial_paciente" >
        <action
            android:id="@+id/action_nav_historial_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_crear_consulta"
        android:name="com.edgarmontero.proyectoDam.fragment.CrearConsultaFragment"
        android:label="@string/pedir_consulta"
        tools:layout="@layout/fragment_crear_consulta" >
        <action
            android:id="@+id/action_nav_crear_consulta_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_ajustes"
        android:name="com.edgarmontero.proyectoDam.fragment.AjustesFragment"
        android:label="@string/ajustes"
        tools:layout="@layout/fragment_ajustes" >
        <action
            android:id="@+id/action_nav_ajustes_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_editar_perfil"
        android:name="com.edgarmontero.proyectoDam.fragment.EditarPerfilFragment"
        android:label="@string/editar_perfil"
        tools:layout="@layout/fragment_editar_perfil" >
        <action
            android:id="@+id/action_nav_editar_perfil_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

</navigation>