<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FAFAFA"
    tools:context=".ui.CrearConsulta">

    <EditText
        android:id="@+id/etTipoConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tipo_consulta"
        android:inputType="text"
        android:drawableStart="@drawable/ic_assignment_black_24dp"
        android:drawablePadding="10dp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/etDescripcionConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion_consulta"
        android:inputType="textMultiLine"
        android:drawableStart="@drawable/ic_description_black_24dp"
        android:drawablePadding="10dp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/etFechaConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fecha_consulta"
        android:focusable="false"
        android:clickable="true"
        android:inputType="none"
        android:drawableStart="@drawable/ic_calendar_today_black_24dp"
        android:drawablePadding="10dp"
        android:padding="12dp" />

    <Button
        android:id="@+id/btnCrearConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedir_consulta"
        android:background="@color/black"
        android:textColor="#FFFFFF"
        android:padding="12dp" />
</LinearLayout>
